--- a/style/style.css
+++ b/style/style.css
@@ -10,101 +10,81 @@
 
 body {
     background: #fffefc;
-    width: 60%;
+    width: 1000px;
     margin: auto;
 }
 
-.header {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding-top: 3em;
-    padding-bottom: 3em;
-    width: 100%;
-    grid-column-gap: 1em;
+@media only screen and (max-width: 1080px) {
+    body {
+        width: 95%;
+        margin: auto;
+    }
 }
 
-.headertxt {
-    text-align: right;
+header {
+    margin-top: 8em;
+    margin-bottom: 8em;
 }
 
-#headername {
-    text-transform: uppercase;
-    font-family: oswald;
-    font-size: 3em;
+
+#landingtitle {
+    font-family: 'Poppins', sans-serif;
+    text-transform: ;
+    font-size: 2em;
+    text-align: center;
+    font-weight: 500;
 }
 
-#headertitles {
-    font-family: quattrocento;
-    font-weight: regular;
-}
-
-.about {
-    padding-top: 1em;
-    width: 70%;
-    font-family: quattrocento;   
-}
-
-.projects {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(auto, auto);
-    grid-row-gap: 3em;
-    grid-column-gap: 1em;
-}
-
-.projects > div > a {
-    text-decoration: none;
-    color: black;
-    
+#landingdsc {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1em;
+    width: 50%;
+    margin: auto;
+    font-weight: 300;
+    text-align: center;
 }
 
 .projectimg {
-    grid-column: span 2;
     width: 100%;
     display: block;
+    margin-bottom: 1em;
 }
 
-.projectdsc {
-    font-family: quattrocento;
+.vid {
+    margin-top: 1em;
 }
 
-.projects > div:nth-child(4n+3) {
-    text-align: center;
+.totorovid {
+    width: 49%;
+    margin-bottom: 2em;
 }
 
-.projectdscheader {
-    font-family: oswald;
-    text-transform: uppercase;
-    font-size: 1.6em;
-    text-align: left;
-    width: 90%;
+#totorovidleft {
+    float: left;
 }
 
-.projectabout {
-    padding-top: .5em;
-    text-align: left;
-    width: 90%;
+#totorovidright {
+    float: right;
+}
+
+.projectdsccontainer {
+    width: 50%;
     margin: auto;
+    margin-top: 2em;
+    margin-bottom: 18em;
+}
+
+.projecttitle {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5em;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: .5em
 }
 
 .projectdsc {
-    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1em;
+    font-weight: 300;
+    line-height: 2em;
 }
-
-
-.footer {
-    text-align: center;
-    margin-top: 5em;
-    margin-bottom: 5em;
-    font-family: quattrocento;
-}
-
-.abouttxt {
-    text-align: justify;
-}
-
-
-
-
-
-
