--- a/style.css
+++ b/style.css
@@ -9,14 +9,15 @@
 }
 
 .slick-prev:before, .slick-next:before { 
-    color:black !important;
+    color:#333333 !important;
     
 }
 
 body {
-    background: #fffefc;
+    background: #f1f3f6;
     width: 1000px;
     margin: auto;
+    color: #333333;
 }
 
 @media only screen and (max-width: 1080px) {
@@ -27,8 +28,14 @@ body {
 }
 
 header {
-    margin-top: 8em;
+    margin-top: 4em;
     margin-bottom: 4em;
+}
+
+#imedho {
+    display: block;
+    width: 50%;
+    margin: auto;
 }
 
 .title {
@@ -44,7 +51,6 @@ header {
 
 
 .landingdscdiv {
-    margin-top: .6em;
     text-align: center;
     font-family: 'Poppins', sans-serif; 
     line-height: 1.4em;
@@ -52,7 +58,7 @@ header {
 
 .landingdscdiv a {
     text-decoration: none;
-    color: black;
+    color: #333333;
 }
 
 .landingdscdiv2 {
