--- a/styleabout.css
+++ b/styleabout.css
@@ -9,9 +9,10 @@
 }
 
 body {
-    background: #fffefc;
+    background: #f1f3f6;
     width: 1000px;
     margin: auto;
+    color: #333333;
 }
 
 @media only screen and (max-width: 1080px) {
@@ -22,8 +23,8 @@ body {
 }
 
 header {
-    margin-top: 8em;
-    margin-bottom: 8em;
+    margin-top: 4em;
+    margin-bottom: 4em;
 }
 
 .title {
@@ -38,7 +39,6 @@ header {
 }
 
 .landingdscdiv {
-    margin-top: .6em;
     text-align: center;
     font-family: 'Poppins', sans-serif; 
     line-height: 1.4em;
