--- a/style.css
+++ b/style.css
@@ -9,15 +9,15 @@
 }
 
 .slick-prev:before, .slick-next:before { 
-    color:#333333 !important;
+    color:#474952 !important;
     
 }
 
 body {
-    background: #f1f3f6;
+    background: #f8f8f6;
     width: 1000px;
     margin: auto;
-    color: #333333;
+    color: #474952;
 }
 
 @media only screen and (max-width: 1080px) {
@@ -35,6 +35,7 @@ header {
 #imedho {
     width: 50%;
     margin: auto;
+    margin-bottom: 1em;
 }
 
 .title {
@@ -71,7 +72,7 @@ header {
 
 .landingdscdiv2 a {
     text-decoration: none;
-    color: black;
+    color: #474952;
 }
 
 .projectimg {
@@ -110,7 +111,7 @@ header {
 }
 
 #flyf {
-    color: black;
+    color: #474952;
 }
 
 #links {
