--- a/styleabout.css
+++ b/styleabout.css
@@ -22,6 +22,12 @@ body {
     }
 }
 
+#imedho {
+    width: 50%;
+    margin: auto;
+    margin-bottom: 1em;
+}
+
 header {
     margin-top: 4em;
     margin-bottom: 4em;
