--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
     background: white;
     width: 1000px;
     margin: auto;
+    padding-right: 1em;
+    padding-left: 1em;
     color: #474952;
 }
 
