--- a/style.css
+++ b/style.css
@@ -58,6 +58,8 @@ header {
     line-height: 1.4em;
 }
 
+
+
 .landingdscdiv a {
     text-decoration: none;
     color: #333333;
@@ -114,6 +116,12 @@ header {
 
 #flyf {
     color: #474952;
+}
+
+#processbook {
+    color: #474952;
+    font-size: .8em;
+    
 }
 
 #links {
