--- a/style.css
+++ b/style.css
@@ -1,148 +1,142 @@
 *,
 *:before,
 *:after {
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.slick-prev:before, .slick-next:before { 
-    color:#474952 !important;
-    
+.slick-prev:before,
+.slick-next:before {
+  color: #474952 !important;
 }
 
 body {
-    background: white;
-    width: 1000px;
-    margin: auto;
-    padding-right: 1em;
-    padding-left: 1em;
-    color: #474952;
+  background: white;
+  width: 1000px;
+  margin: auto;
+  padding-right: 1em;
+  padding-left: 1em;
+  color: #474952;
 }
 
 @media only screen and (max-width: 1080px) {
-    body {
-        width: 95%;
-        margin: auto;
-    }
+  body {
+    width: 95%;
+    margin: auto;
+  }
 }
 
 header {
-    margin-top: 4em;
-    margin-bottom: 4em;
+  margin-top: 4em;
+  margin-bottom: 4em;
 }
 
 #imedho {
-    width: 50%;
-    margin: auto;
-    margin-bottom: 1em;
+  width: 50%;
+  margin: auto;
+  margin-bottom: 1em;
 }
 
 .title {
-    text-align: center;
+  text-align: center;
 }
 
 #landingtitle {
-    font-family: 'Poppins', sans-serif;
-    font-size: 2em;
-    font-weight: 500;
-    text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 2em;
+  font-weight: 500;
+  text-align: center;
 }
-
 
 .landingdscdiv {
-    text-align: center;
-    font-family: 'Poppins', sans-serif; 
-    line-height: 1.4em;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  line-height: 1.4em;
 }
 
-
-
 .landingdscdiv a {
-    text-decoration: none;
-    color: #333333;
+  text-decoration: none;
+  color: #333333;
 }
 
 .landingdscdiv2 {
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 1em;
-    text-align: center;
-    font-family: 'Poppins', sans-serif; 
-    line-height: 1.4em;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 1em;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  line-height: 1.4em;
 }
 
 .landingdscdiv2 a {
-    text-decoration: none;
-    color: #474952;
+  text-decoration: none;
+  color: #474952;
 }
 
 .projectimg {
-    width: 100%;
-    display: block;
+  width: 100%;
+  display: block;
 }
 
 .projectdsccontainer {
-    width: 50%;
-    margin: auto;
-    margin-top: 2em;
-    margin-bottom: 18em;
+  width: 50%;
+  margin: auto;
+  margin-top: 2em;
+  margin-bottom: 18em;
 }
 
 .projecttitle {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.5em;
-    font-weight: 500;
-    text-align: center;
-    margin-bottom: .5em
+  font-family: "Crimson Pro", sans-serif;
+  font-size: 2em;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 0.5em;
 }
 
 .projectdsc {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1em;
-    font-weight: 300;
-    line-height: 2em;
-}
-
-#links{
-    margin-bottom: 4em;
-}
-
-#ig {
-    margin-right: 1em;
-}
-
-#flyf {
-    color: #474952;
-}
-
-#processbook {
-    color: #474952;
-    font-size: .8em;
-    
+  font-family: "Poppins", serif;
+  font-size: 1em;
+  font-weight: 300;
+  line-height: 2em;
 }
 
 #links {
-    display: flex;
-    justify-content: center
+  margin-bottom: 4em;
+}
+
+#ig {
+  margin-right: 1em;
+}
+
+#flyf {
+  color: #474952;
+}
+
+#processbook {
+  color: #474952;
+  font-size: 0.8em;
+}
+
+#links {
+  display: flex;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 800px) {
-    body {
-        width: 100%;
-        margin: auto;
-        padding-right: 0em;
-        padding-left: 0em;
-    }
-    
-    .projectdsccontainer {
+  body {
+    width: 100%;
+    margin: auto;
+    padding-right: 0em;
+    padding-left: 0em;
+  }
+
+  .projectdsccontainer {
     width: 80%;
     margin: auto;
     margin-top: 2em;
     margin-bottom: 10em;
-}
-   
-    
+  }
 }
